<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context="com.example.android.prague.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/image_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/prague" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/welcome"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ImageButton
            android:id="@+id/prague_logo"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="32dp"
            android:background="@color/main_background"
            android:scaleType="centerCrop"
            android:src="@drawable/prague_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/choose_category" />


        <!--Buttons for choosing the category-->
        <LinearLayout style="@style/category_buttons_layout">

            <Button
                android:id="@+id/main_button_landmark"
                style="@style/category_buttons"
                android:text="@string/landmarks" />

            <Button
                android:id="@+id/main_button_hotels"
                style="@style/category_buttons"
                android:text="@string/hotels" />
        </LinearLayout>

        <LinearLayout style="@style/category_buttons_layout">

            <Button
                android:id="@+id/main_button_restaurants"
                style="@style/category_buttons"
                android:text="@string/restaurants" />

            <Button
                android:id="@+id/main_button_transport"
                style="@style/category_buttons"
                android:text="@string/transportation" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
